# CMake-Template

./: .gitignore  CMakeLists.txt  README.md
scripts/: genWinProject.bat
src/: CMakeLists.txt
